project sidenav-options service
