# dto/response/subject_response.go
@@ -1,1 +1,8 @@
 package response
+
+type SubjectNavTreeResponse struct {
+	ID          uint64 `json:"id"`
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	ProjectID   uint64 `json:"project_id"`
+}
