# handler/project-handler.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/DEONSKY/go-sandbox/dto/request"
 	"github.com/DEONSKY/go-sandbox/helper"
@@ -34,4 +35,31 @@ func InsertProject(context *fiber.Ctx) error {
 	response := helper.BuildResponse(true, "OK", result)
 	return context.Status(http.StatusCreated).JSON(response)
 
+}
+
+// Returns projects that the user is a member of, with subjects
+// @Summary Returns projects that the user is a member of, with subjects
+// @Description Returns projects that the user is a member of, with subjects
+// @Tags project
+// @Accept json
+// @Produce json
+// @Param userID path uint64 true "User ID"
+// @Success 200 {object} helper.Response{data=response.ProjectNavTreeResponse}
+// @Failure 400 {object} helper.Response{data=[]helper.EmptyObj}
+// @Security ApiKeyAuth
+// @Router /api/project/sidenav-options [post]
+func GetProjectsByUserId(context *fiber.Ctx) error {
+	user_id, err := strconv.ParseUint(context.Params("user_id"), 10, 64)
+	log.Println(user_id)
+	if err != nil {
+		res := helper.BuildErrorResponse("Wrong UserID Parameter", err.Error(), helper.EmptyObj{})
+		return context.Status(http.StatusBadRequest).JSON(res)
+	}
+	result, err := service.GetProjectsByUserId(user_id)
+	if err != nil {
+		res := helper.BuildErrorResponse("Something went wrong while search", err.Error(), helper.EmptyObj{})
+		return context.Status(http.StatusBadRequest).JSON(res)
+	}
+	response := helper.BuildResponse(true, "OK", result)
+	return context.Status(http.StatusOK).JSON(response)
 }
