# model/user.go
@@ -13,6 +13,7 @@ type User struct {
 	Email     string         `gorm:"uniqueIndex;type:varchar(255)" json:"email"`
 	Password  string         `gorm:"->;<-;not null" json:"-"`
 	Token     string         `gorm:"-" json:"token,omitempty"`
+	Subjects  *[]Subject     `gorm:"many2many:SubjectUser;constraint:onUpdate:CASCADE,onDelete:CASCADE" json:"user"`
 	CreatedAt time.Time      `json:"createdAt"`
 	UpdatedAt time.Time      `json:"updatedAt"`
 	DeletedAt gorm.DeletedAt `json:"-"`
